src/scss/common.scss
@use "sass:map";

.split {
    display: flex;
    flex-direction: row;
}

.gutter {
    background-color: $side-color;
    background-repeat: no-repeat;
    background-position: 50%;
}

.gutter.gutter-horizontal {
    // background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAeCAYAAADkftS9AAAAIklEQVQoU2M4c+bMfxAGAgYYmwGrIIiDjrELjpo5aiZeMwF+yNnOs5KSvgAAAABJRU5ErkJggg==');
    cursor: col-resize;
    // z-index: map.get($zindex-levels, 'side') // This broke for some reason
    z-index: 15;
}

.btn-element {
    @include button-variant($side-bg, $side-color, color-contrast($side-bg), $side-bg, $side-bg, $side-color, $side-bg);
    border-radius: $btn-border-radius
}

.side-container {
    background-color: $side-bg;

    ::-webkit-scrollbar {
        width: 10px;
    }

    ::-webkit-scrollbar-track {
        background: $side-bg;
    }

    ::-webkit-scrollbar-thumb {
        background: $side-color;
    }

    ::-webkit-scrollbar-thumb:hover {
        background: $side-color;
    }

    .btn-element {
        @include button-variant($side-element-bg, // Background
            $side-element-color, // Border
            $side-element-color, // Color
            $side-element-bg-hover, // Hover Background
            $side-element-color-hover, // Hover Border
            $side-element-color-hover, // Hover Color
            $side-element-bg); // Active Background
        border-radius: $btn-border-radius;

        .btn-holder {
            background-color: $side-element-bg;
        }

        :hover > .btn-holder:first-child {
            background-color: $side-element-color;
        }
    }

    .is-over {
        background-color: mix($side-bg, $danger, 20%);
    }

    .footer {
        border-top-color: $side-color;
        border-top-style: solid;
        border-top-width: 2px;

        .btn-left-hover {
            background: $side-button-bg;
            color: $side-button-color;
            background-size: 210% 100%;
            background-position: right bottom;
            transition: all 0.3s ease-out;
        }

        .btn-left-hover:hover,
        .btn-left-hover:active {
            color: $side-button-color-hover;
            background: linear-gradient(to right, $side-button-bg-hover 50%, $side-button-bg 50%);
            background-size: 210% 100%;
            background-position: left bottom;
        }

        .btn-right-hover {
            background: $side-bg;
            color: $side-button-color;
            background-size: 210% 100%;
            background-position: left bottom;
            transition: all 0.3s ease-out;
        }

        .btn-right-hover:hover,
        .btn-right-hover:active {
            color: $side-button-color-hover;
            background: linear-gradient(to left, $side-button-bg-hover 50%, $side-button-bg 50%);
            background-size: 210% 100%;
            background-position: right bottom;
        }
    }
}

.main-container {
    background-color: $main-bg;

    .btn-element {
        @include button-variant(
            $main-element-bg, // Background
            $main-element-color, // Border
            $main-element-color, // Color
            $main-element-bg-hover, // Hover Background
            $main-element-color-hover, // Hover Border
            $main-element-color-hover, // Hover Color
            $main-element-bg // Active Background
        );
        border-radius: $btn-border-radius;

        .btn-holder {
            background-color: $main-element-bg;
        }

        :hover > .btn-holder:first-child {
            background-color: $main-element-color;
        }
    }

    .btn-no-outline {
        @include button-variant(
            $main-button-bg, // Background
            $main-button-bg, // Border
            $main-button-color, // Color
            $main-button-bg-hover, // Hover Background
            $main-button-bg-hover, // Hover Border
            $main-button-color-hover, // Hover Color
            $main-button-bg-hover, // Active Background
            $main-button-bg-hover, // Active Border
            $main-button-color-hover // Active Color
        );
    }

    .btn-info {
        @include button-variant(
            $main-button-bg, // Background
            $main-button-bg, // Border
            $main-button-color, // Color
            $main-button-bg-hover, // Hover Background
            $main-button-bg-hover, // Hover Border
            $primary, // Hover Color
            $main-button-bg-hover, // Active Background
            $main-button-bg-hover, // Active Border
            $primary // Active Color
        );
    }

    .dropdown-menu {
        .dropdown-item:hover {
            background-color: $dropdown-bg
        }
    }
}

.btn-offline {
    @include button-variant(
        $main-button-bg, // Background
        $main-button-bg, // Border
        $danger, // Color
        $main-button-bg-hover, // Hover Background
        $main-button-bg-hover, // Hover Border
        $danger, // Hover Color
        $main-button-bg-hover, // Active Background
        $main-button-bg-hover, // Active Border
        $danger // Active Color
    );
}

.full-size {
    height: 100vh;
    width: 100vw;
}

.btn-element.holo {
    --#{$prefix}btn-hover-bg: #{$dark};
    --#{$prefix}btn-hover-color: #{$dark};
    --#{$prefix}btn-active-color: #{$dark};
}

.btn-element.holo:hover {
    background-color: var(--#{$prefix}-btn-hover-bg);
}

.btn-element.holo .btn-holder {
    background-color: transparent;
}

.btn-element:hover>.btn-holder:first-child {
    background-color: $side-color;
}

.btn-element .btn-holder,
.btn-element .glare,
.btn-element .shine,
.btn-element .holder {
    border-radius: $btn-border-radius
}

select option {
    background-color: $body-bg;
    color: $body-color;
}
/* ... */

